--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,4 @@ jobs:
           bundler: ${{ matrix.bundler }}
           bundler-cache: true # runs `bundle install` and caches gems automatically
       - name: Run tests
-        run: bundle exec rake
+        run: bundle exec rake test
