--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,10 @@ jobs:
           - rails-6.1
           - rails-master
         include:
-          - { ruby: "2.7", gemfile: "rails-5.2", bundler: "default" }
-          - { ruby: "2.7", gemfile: "rails-6.0", bundler: "default" }
-          - { ruby: "2.7", gemfile: "rails-6.1", bundler: "default" }
-          - { ruby: "2.7", gemfile: "rails-master", bundler: "default" }
+          - { ruby: "2.7", gemfile: "rails_5.2", bundler: "default" }
+          - { ruby: "2.7", gemfile: "rails_6.0", bundler: "default" }
+          - { ruby: "2.7", gemfile: "rails_6.1", bundler: "default" }
+          - { ruby: "2.7", gemfile: "rails_master", bundler: "default" }
 
     env:
       BUNDLE_GEMFILE: gemfiles/${{ matrix.gemfile }}.gemfile
