--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,10 @@ jobs:
         ruby: [2.7]
         bundler: [default]
         gemfile:
-          - rails-5.2
-          - rails-6.0
-          - rails-6.1
-          - rails-master
+          - rails_5.2
+          - rails_6.0
+          - rails_6.1
+          - rails_master
         include:
           - { ruby: "2.7", gemfile: "rails_5.2", bundler: "default" }
           - { ruby: "2.7", gemfile: "rails_6.0", bundler: "default" }
@@ -32,8 +32,6 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: ${{ matrix.ruby }}
-          bundler: ${{ matrix.bundler }}
           bundler-cache: true # runs `bundle install` and caches gems automatically
       - name: Run tests
         run: bundle exec rake test
