--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
+          ruby-version: 2.7
           bundler-cache: true # runs `bundle install` and caches gems automatically
       - name: Run tests
         run: bundle exec rake test
